avoid jumping page content due to scrollbar

--- a/NuGet.Docs/css/nuget.docs.css
+++ b/NuGet.Docs/css/nuget.docs.css
@@ -1,4 +1,8 @@
-﻿/* Headings */
+﻿@-ms-viewport {
+    width: device-width;
+}
+
+/* Headings */
 h1,h2,h3,h4,h5,h6 { font-weight: normal; margin:.6em 0;}
 
 h1 { font-size: 2em; }
